--- a/Templates/index.html
+++ b/Templates/index.html
@@ -9,7 +9,9 @@
     <h1>Bienvenido al Panel de Control</h1>
     <ul>
         <li><a href="/usuarios_criticos">Usuarios Críticos</a></li>
+        <li><a href="/login/login.html">Usuarios Críticos</a></li>
         <li><a href="/paginas_desactualizadas">Páginas Desactualizadas</a></li>
+
     </ul>
 
 </body>
