--- a/Templates/login/forgot.html
+++ b/Templates/login/forgot.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>forgot password</title>
-  <link rel="stylesheet" href="login.css">
+  <title>FORGOT PASSWORD</title>
+  <link rel="stylesheet" href="/static/css/login.css">
 </head>
 <body>
 <div class="box">
@@ -17,7 +17,7 @@
       <i></i>
     </div>
     <div class="links">
-      <a href="login.html">Log in</a>
+      <a href="/showLogin">Log in</a>
     </div>
     <button type="submit" value="Enviar" >Enviar</button>
   </form>
