--- a/Templates/login/loginError.html
+++ b/Templates/login/loginError.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>LOGIN ERROR</title>
-    <link rel="stylesheet" href="/login/loginError.css">
+
 
 </head>
 <body>
@@ -16,7 +16,7 @@
     <h1>404</h1>
     <h2>USER NOT FOUND</h2>
     <h3>BACK TO HOME?</h3>
-    <a href="/login" class="yes">YES</a>
+    <a href="/showLogin" class="yes">YES</a>
     <a href="https://www.youtube.com/watch?v=G3AfIvJBcGo" target="_blank">NO</a>
   </div>
 </section>
