--- a/Templates/index.html
+++ b/Templates/index.html
@@ -11,6 +11,7 @@
         <li><a href="/usuarios_criticos">Usuarios Críticos</a></li>
         <li><a href="/login/login.html">Usuarios Críticos</a></li>
         <li><a href="/paginas_desactualizadas">Páginas Desactualizadas</a></li>
+        <li><a href="/lastVulnerabilities">Últimas 10 vulnerabilidades</a></li>
 
     </ul>
 
