--- a/Templates/index.html
+++ b/Templates/index.html
@@ -12,6 +12,8 @@
         <li><a href="/showLogin">Log In</a></li>
         <li><a href="/paginas_desactualizadas">Páginas Desactualizadas</a></li>
         <li><a href="/lastVulnerabilities">Últimas 10 vulnerabilidades</a></li>
+        <li><a href="/analizarUsuario">Analizar usuarios</a></li>
+
     </ul>
 
 </body>
