--- a/Templates/esCriticoOno.html
+++ b/Templates/esCriticoOno.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resultados de la Predicción</title>
+    <title>Resultado</title>
 </head>
 <body>
-    <h1>Resultados de la Predicción</h1>
-    <h2>Modelo Lineal:</h2>
-    <p>{{ predictions['Linear Model'] }}</p>
-    <h2>Árbol de Decisión:</h2>
-    <p>{{ predictions['Decision Tree'] }}</p>
-    <h2>Bosque Aleatorio:</h2>
-    <p>{{ predictions['Random Forest'] }}</p>
+    <h1>Resultado</h1>
+    <p>Usuario: {{ nombre }}</p>
+    <p>Resultado: {{ resultado }}</p>
 </body>
 </html>
+
