Revert "Merge branch 'main' of https://github.com/adrianAntonP/practica2-SI"
This reverts commit 1c4869ef72f2adc98cfe0dbea1aa65f6b71f63c3, reversing
changes made to a857894ff1255342cae5c8270b8ec80da69263cd.

--- a/Templates/login/sign_up.html
+++ b/Templates/login/sign_up.html
@@ -13,8 +13,8 @@
 
     <div class="two">
       <div class="inputBox2">
-        <input type="text" name="username" id="username" required="required">
-        <span>Username</span>
+        <input type="text" name="Name" id="Name" required="required">
+        <span>Name</span>
         <i></i>
       </div>
       <div class="inputBox2">
@@ -25,8 +25,8 @@
     </div>
     <div class="two">
       <div class="inputBox2">
-        <input type="text" name="Province" id="Province" required="required">
-        <span>Provincia</span>
+        <input type="text" name="dni" id="dni" required="required">
+        <span>DNI</span>
         <i></i>
       </div>
       <div class="inputBox2">
