--- a/Templates/login/login.html
+++ b/Templates/login/login.html
@@ -11,8 +11,8 @@
     <form id="LogIn" action="/login" method="post">
         <h2>Log in</h2>
         <div class="inputBox">
-            <input type="text" name="username" id="username" required="required">
-            <span>Username</span>
+            <input type="text" name="dni" id="dni" required="required">
+            <span>DNI</span>
             <i></i>
         </div>
         <div class="inputBox">
