--- a/Templates/index.html
+++ b/Templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="/static/css/styleIndex.css">
     <title>Panel de Control</title>
 </head>
 <body>
