--- a/Templates/login/login.html
+++ b/Templates/login/login.html
@@ -12,7 +12,7 @@
         <h2>Log in</h2>
         <div class="inputBox">
             <input type="text" name="username" id="username" required="required">
-            <span>USERNAME</span>
+            <span>Username</span>
             <i></i>
         </div>
         <div class="inputBox">
