--- a/Templates/login/sign_up.html
+++ b/Templates/login/sign_up.html
@@ -13,32 +13,58 @@
 
     <div class="two">
       <div class="inputBox2">
-        <input type="text" name="Name" id="Name" required="required">
-        <span>Name</span>
+        <input type="text" name="Username" id="Username" required="required">
+        <span>Username</span>
         <i></i>
       </div>
       <div class="inputBox2">
-        <input type="text" name="Surname" id="Surname" required="required">
-        <span>Surname</span>
+        <input type="text" name="Province" id="Province" required="required">
+        <span>Provincia</span>
         <i></i>
       </div>
     </div>
     <div class="two">
       <div class="inputBox2">
-        <input type="text" name="dni" id="dni" required="required">
-        <span>DNI</span>
+        <input type="text" name="ips" id="ips" required="required">
+        <span>IPS</span>
         <i></i>
       </div>
       <div class="inputBox2">
-        <input type="text" name="NumberPhone" id="NumberPhone" required="required">
+        <input type="number" name="NumberPhone" id="NumberPhone" required="required">
         <span>Number Phone</span>
         <i></i>
       </div>
     </div>
-    <div class="inputBox">
-      <input type="email" name="email" id="email" required="required">
-      <span>Email</span>
-      <i></i>
+    <div class="two">
+      <div class="inputBox2">
+        <input type="number" name="TotalEmails" id="TotalEmails" required="required">
+        <span>Emails Totales</span>
+        <i></i>
+      </div>
+      <div class="inputBox2">
+        <input type="number" name="PhishingEmails" id="PhishingEmails" required="required">
+        <span>Emails Phishing</span>
+        <i></i>
+      </div>
+    </div>
+    <div class="two">
+     <div class="inputBox2">
+        <input type="number" name="ClickEmails" id="ClickEmails" required="required">
+        <span>Emails Clicados</span>
+        <i></i>
+      </div>
+    </div>
+    <div class="two">
+     <div class="inputBox2">
+        <input type="text" name="Dates" id="Dates" required="required">
+        <span>Fecha</span>
+        <i></i>
+      </div>
+      <div class="inputBox2">
+        <input type="number" name="Permissions" id="Permissions" required="required">
+        <span>Permisos</span>
+        <i></i>
+      </div>
     </div>
     <div class="two">
       <div class="inputBox2">
@@ -54,6 +80,7 @@
         <i></i>
       </div>
     </div>
+
     <div class="links">
       <a href="/showLogin">Log In</a>
     </div>
