--- a/Templates/usuarios_criticos.html
+++ b/Templates/usuarios_criticos.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/html2pdf.js/dist/html2pdf.bundle.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Usuarios Críticos</title>
     <style>
         .hidden {
             display: none;
+        }
+        .circle {
+            height: 20px;
+            width: 20px;
+            border-radius: 50%;
+            display: inline-block;
+        }
+        .green {
+            background-color: green;
+        }
+        .red {
+            background-color: red;
         }
     </style>
 </head>
@@ -30,37 +41,28 @@
             {% for i in range(usuarios|length) %}
             <tr>
                 <td>{{ usuarios[i] }}</td>
-                <td class="hidden">{{ phishing_50[i] }}</td>
+                <td class="hidden">{% if phishing_50[i] %}<span class="circle green"></span>{% else %}<span class="circle red"></span>{% endif %}</td>
             </tr>
             {% endfor %}
         </tbody>
-        <button id="pdfButton" onclick="generatePDF()">Descargar PDF</button>
     </table>
-
     <img id="pieChart" src="{{ url_for('static', filename='pie_chart.png') }}" alt="Gráfico de Pastel" class="hidden">
-       <script>
-        function generatePDF() {
-            var element = document.getElementById("pieChart");
-            html2pdf().from(element).save();
-        }
-       function toggleColumn() {
-        var column = document.getElementById("phishingColumn");
-        var cells = document.querySelectorAll("td:nth-child(2)");
-        var pieChart = document.getElementById("pieChart");
-        var pdfButton = document.getElementById("pdfButton");
+    <script>
+        function toggleColumn() {
+            var column = document.getElementById("phishingColumn");
+            var cells = document.querySelectorAll("td:nth-child(2)");
+            var pieChart = document.getElementById("pieChart");
 
-        if (column.classList.contains("hidden")) {
-            column.classList.remove("hidden");
-            cells.forEach(cell => cell.classList.remove("hidden"));
-            pieChart.classList.remove("hidden");
-            pdfButton.disabled = false;
-        } else {
-            column.classList.add("hidden");
-            cells.forEach(cell => cell.classList.add("hidden"));
-            pieChart.classList.add("hidden");
-            pdfButton.disabled = true;
+            if (column.classList.contains("hidden")) {
+                column.classList.remove("hidden");
+                cells.forEach(cell => cell.classList.remove("hidden"));
+                pieChart.classList.remove("hidden"); // Mostrar el gráfico de pastel
+            } else {
+                column.classList.add("hidden");
+                cells.forEach(cell => cell.classList.add("hidden"));
+                pieChart.classList.add("hidden"); // Ocultar el gráfico de pastel
+            }
         }
-}
     </script>
 </body>
 </html>
