update analizar usuario

--- a/Templates/analizarUsuario.html
+++ b/Templates/analizarUsuario.html
@@ -27,9 +27,12 @@
             <option value="regresion_lineal">Regresión Lineal</option>
             <option value="decision_tree">Árbol de Decisión</option>
             <option value="random_forest">Random Forest</option>
-        </select><br><br>
+        </select>
         <input type="submit" value="Enviar">
     </form>
 </body>
 </html>
+
+
+
 
