--- a/Templates/analizarUsuario.html
+++ b/Templates/analizarUsuario.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/css/analizarUsuario.css">
+
     <title>Formulario de Usuario</title>
 </head>
 <body>
